[package]
name = "rust-backend"
version = "1.0.14"
edition = "2024"

[dependencies]
bson = { version = "3.1.0", features = ["serde", "serde_with-3", "chrono-0_4"] }
chrono = { version = "0.4.45", features = ["serde"] }
mongodb = { version = "3.8.0", features = ["sync"] }
serde = { version = "1.0.227", features = ["derive"] }
ureq = { version = "3.3.0", features = ["json"] }
thiserror = "2.0.18"
log = "0.4.33"
env_logger = "0.11.11"
signal-hook = "0.4.4"
once_cell = "1.21.4"
serde_with = "3.21.0"
